| Summary: | ASTERISK-27741: res_pjsip_rfc3326.c rfc3326_use_reason_header doesn't account for more than one 'Reason' header | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2018-03-14 09:42:52 | Date Closed: | 2018-03-15 06:48:43 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_rfc3326 |
| Versions: | 13.19.2 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora | Attachments: | |
| Description: | The method call 'rfc3326_use_reason_header' does not take into account more than one 'Reason' header when checking hangup cause | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-03-14 09:42:52.633-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-03-15 06:48:44.661-0500 Change 8522 merged by Joshua Colp: res_pjsip_rfc3326.c: Account for more than one 'Reason' header [https://gerrit.asterisk.org/8522|https://gerrit.asterisk.org/8522] By: Friendly Automation (friendly-automation) 2018-03-15 06:53:13.726-0500 Change 8524 merged by Jenkins2: res_pjsip_rfc3326.c: Account for more than one 'Reason' header [https://gerrit.asterisk.org/8524|https://gerrit.asterisk.org/8524] By: Friendly Automation (friendly-automation) 2018-03-15 07:03:03.911-0500 Change 8523 merged by Jenkins2: res_pjsip_rfc3326.c: Account for more than one 'Reason' header [https://gerrit.asterisk.org/8523|https://gerrit.asterisk.org/8523] | ||