res_pjsip_rfc3326.c: Account for more than one 'Reason' header

ASTERISK-27741

Change-Id: I0aa59a54735c6d20b95c54db1bd095dbf93e7adf